--- a/rust/files_adn_args/Cargo.toml
+++ b/rust/files_adn_args/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-argparse = "0.2.2" 
+structopt = {version = "0.3", features = ["paw"]}
+paw = "1.0"
+strum = { version = "0.23", features = ["derive"] }
+strum_macros = "0.23"
+
