Working fasta file generation

--- a/rust/files_adn_args/Cargo.toml
+++ b/rust/files_adn_args/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = {version = "0.3", features = ["paw"]}
-paw = "1.0"
+structopt = {version = "0.3"}
 strum = { version = "0.23", features = ["derive"] }
 strum_macros = "0.23"
+rand = "0.8.4"
 
